# robotic_order_fulfillment_robotic_turtle

./: .gitignore  README.md
bridge_msgs/: CMakeLists.txt  package.xml
docker/ros2_base/: Dockerfile
docker/ros2_turtlebot/: Dockerfile  build.bash  run.bash
ros2_spawn_model_to_ros1/: package.xml  setup.cfg  setup.py
ros2_spawn_model_to_ros1/launch/: turtlebot.launch.py
scripts/: hardware.yml  session.yml  start_hardware.sh  start_simulation.sh
turtlebot3_description/urdf/: turtlebot3_waffle.urdf
turtlebot_description/: CMakeLists.txt  package.xml
turtlebot_description/urdf/: turlebot.urdf  turtlebot.urdf
xv2_barcode/: CMakeLists.txt  package.xml
xv2_barcode/include/xv2_barcode/: barcode_detect.h  barcode_read.h
xv2_barcode/src/: barcode_detect.cpp  barcode_read.cpp
xv2_description/: CMakeLists.txt  package.xml  setup.cfg  setup.py
xv2_description/launch/: description.launch.py
xv2_description/urdf/: box.urdf  fake_turtle.urdf  xv2_turtle.urdf
xv2_msgs/: CMakeLists.txt  package.xml
xv2_ros2_spawn_model_to_ros1/: CMakeLists.txt  package.xml  setup.cfg  setup.py
xv2_ros2_spawn_model_to_ros1/launch/: turtle.launch.py  turtlebot.launch.py  turtlebot_2.launch.py  turtlebot_box.launch.py  turtlebot_with_camera.launch.py
xv2_ros2_spawn_model_to_ros1/xv2_ros2_spawn_model_to_ros1/: spawn_model.py
xv2_usb_camera/: CMakeLists.txt  package.xml
xv2_usb_camera/include/xv2_usb_camera/: usb_cam_driver.h
xv2_usb_camera/launch/: usb_camera_bringup.launch.py
xv2_usb_camera/src/: usb_cam_driver.cpp
